--- a/view/src/main/webapp/principal/bemVindo.xhtml
+++ b/view/src/main/webapp/principal/bemVindo.xhtml
@@ -7,9 +7,9 @@
 	<h:form>
 		<pxt:panelGrid columnsWidth="*" rowsHeight="100%" height="100%" styleClass="richPanelPrincipal" styleTable="height: 100%" rendered="false">
 			<pxt:cell align="center" valign="middle">
-				<h:graphicImage name="logo_peixoto_140x162.png" library="pxt.framework.faces.img" />
+				<h:graphicImage name="logo_peixoto_140x162.png" libary="pxt.framework.faces.img"/>
 				<br />
-				<h:outputText style="font-size: 28;" value="Sistema Milton" />
+				<h:outputText style="font-size: 28;" value="Sistema NexusShop" />
 				<br />
 				<h:outputText style="font-size: 18;" value="Versão 1.6.99" />
 				<br />
