Implementado cadastro de item inserindo automáticamente no estoque o valor zerado, uma tela de receber mercadoria

--- a/view/src/main/webapp/principal/menu.xhtml
+++ b/view/src/main/webapp/principal/menu.xhtml
@@ -44,6 +44,27 @@
 				</rich:menuItem>
 
 			</rich:dropDownMenu>
+			
+			
+			<rich:dropDownMenu mode="ajax" label="Operacoes">
+
+				<rich:menuItem label="Recebimento de Mercadoria">
+					<pxt:navigation target="../operacoes/recebimentoMercadoria.xhtml" />
+				</rich:menuItem>
+				
+			
+
+			</rich:dropDownMenu>
+			
+			<rich:dropDownMenu mode="ajax" label="Consultas">
+
+				<rich:menuItem label="Relatório de Movimentações">
+					<pxt:navigation target="../consultas/movimentacao.xhtml" />
+				</rich:menuItem>
+				
+			
+
+			</rich:dropDownMenu>
 				
 
 		</rich:toolbar>
