--- a/view/src/main/webapp/cadastro/fornecedor.xhtml
+++ b/view/src/main/webapp/cadastro/fornecedor.xhtml
@@ -12,36 +12,33 @@
 	
 		<ui:define name="panelCadastro">
 			
-			<pxt:panelGrid id="panelCodigoDescricao" columnsWidth="20%;50%;20%;10%" width="100%">
+			<pxt:panelGrid id="panelCodigoDescricao" columnsWidth="15%;45%;25%;10%" width="70%">
 				<h:outputLabel value="Código:" styleClass="outputText" />
 				<h:outputLabel value="Nome:" styleClass="outputText" />
 				<h:outputLabel value="CNPJ:" styleClass="outputText" />
-				
-				
-				<h:panelGroup>
-					<h:selectBooleanCheckbox value="#{fornecedorBean.domain.indicadorAtivo}" disabled= "#{fornecedorBean.disabledOnDefault}" />
-					<h:outputLabel value="Ativo?" styleClass="outputText"/>
-				</h:panelGroup>
+				<h:outputLabel value="" styleClass="outputText" />
 									
-				<h:inputText value="#{fornecedorBean.domain.codigo}" style="width:95%" disabled="#{fornecedorBean.disabledOnInsEdi}" >
+				<h:inputText value="#{fornecedorBean.domain.codigo}" style="width:90%" maxlength="7" disabled="#{fornecedorBean.disabledOnInsEdi}" >
 					<pxt:onlyNumber />
 				</h:inputText> 				
-				<h:inputText value="#{fornecedorBean.domain.nome}" style="width:95%" maxlength="52" disabled="#{fornecedorBean.disabledOnDefault}" >
+				<h:inputText value="#{fornecedorBean.domain.nome}" style="width:97%" maxlength="100" disabled="#{fornecedorBean.disabledOnDefault}" >
 					<pxt:upperCase />
 				</h:inputText> 
 				<h:inputText value="#{fornecedorBean.domain.cnpj}" style="width:95%" maxlength="14" disabled="#{fornecedorBean.disabledOnDefault}" >
 					<pxt:onlyNumber />
 				</h:inputText> 		
-			
-					
+				<h:panelGroup>
+					<h:selectBooleanCheckbox value="#{fornecedorBean.domain.indicadorAtivo}" disabled= "#{fornecedorBean.disabledOnDefault}" />
+					<h:outputLabel value="Ativo?" styleClass="outputText"/>
+				</h:panelGroup>	
 			</pxt:panelGrid>
 		</ui:define>
 		
-		<ui:define name="colunasTabela" columnsWidth="10%;70%;10%;10%">
+		<ui:define name="colunasTabela">
 			<pxtfl:column headerValue="Código" value="#{obj.codigo}" />
 			<pxtfl:column headerValue="Nome" value="#{obj.nome}" />
 			<pxtfl:column headerValue="CNPJ" value="#{obj.cnpj}" />
-			<pxtfl:column headerValue="Status" value="#{obj.indicadorAtivo ? 'Ativo' : 'Inativo'}" />
+			<pxtfl:column headerValue="Situação" value="#{obj.indicadorAtivo ? 'Ativo' : 'Inativo'}" />
 			
 		</ui:define>		
 	</ui:composition>
