--- a/view/src/main/webapp/principal/menu.xhtml
+++ b/view/src/main/webapp/principal/menu.xhtml
@@ -46,10 +46,10 @@
 			</rich:dropDownMenu>
 			
 			
-			<rich:dropDownMenu mode="ajax" label="Operacoes">
-
-				<rich:menuItem label="Recebimento de Mercadoria">
-					<pxt:navigation target="../operacoes/recebimentoMercadoria.xhtml" />
+			<rich:dropDownMenu mode="ajax" label="Operacões">
+				
+				<rich:menuItem label="Movimentações de Mercadoria">
+					<pxt:navigation target="../operacoes/movimentacoesMercadoria.xhtml" />
 				</rich:menuItem>
 				
 			
