--- a/view/src/main/webapp/cadastro/produto.xhtml
+++ b/view/src/main/webapp/cadastro/produto.xhtml
@@ -12,50 +12,38 @@
 	
 		<ui:define name="panelCadastro">
 			
-			<pxt:panelGrid id="panelCodigoDescricao" columnsWidth="3%;15%;3%;8%;8%;8%;8%;8%;5%" width="100%">
+			<pxt:panelGrid id="panelCodigoDescricao" columnsWidth="10%;30%;25%;25%;10%" width="100%">
 				<h:outputLabel value="Código:" styleClass="outputText" />
 				<h:outputLabel value="Descrição:" styleClass="outputText" />
-				<h:outputLabel value="Tamanho:" styleClass="outputText" />
 				<h:outputLabel value="Fornecedor:" styleClass="outputText" />
 				<h:outputLabel value="Marca:" styleClass="outputText" />
-				<h:outputLabel value="Modelo:" styleClass="outputText" />
-				<h:outputLabel value="Categoria:" styleClass="outputText" />
-				<h:outputLabel value="Cor:" styleClass="outputText" />
-				
-				<h:panelGroup>
-					<h:selectBooleanCheckbox value="#{produtoBean.domain.indicadorAtivo}" disabled= "#{produtoBean.disabledOnDefault}" />
-					<h:outputLabel value="Ativo?" styleClass="outputText"/>
-				</h:panelGroup>
-											
-				<h:inputText value="#{produtoBean.domain.codigoProduto}" style="width:80%" disabled="#{produtoBean.disabledOnInsEdi}" >
+				<h:outputLabel value="" styleClass="outputText" />
+														
+				<h:inputText value="#{produtoBean.domain.codigoProduto}" maxlength="7" style="width:90%" disabled="#{produtoBean.disabledOnInsEdi}" >
 					<pxt:onlyNumber />
 				</h:inputText> 				
-				<h:inputText value="#{produtoBean.domain.descricaoProduto}" style="width:95%" maxlength="52" disabled="#{produtoBean.disabledOnDefault}" >
+				<h:inputText value="#{produtoBean.domain.descricaoProduto}" style="width:97%" maxlength="100" disabled="#{produtoBean.disabledOnDefault}" >
 					<pxt:upperCase />
 				</h:inputText> 
 
-				<h:inputText value="#{produtoBean.domain.tamanhoProduto}" style="width:60%" maxlength="5" disabled="#{produtoBean.disabledOnDefault}" >
-					<pxt:onlyNumber />
-				</h:inputText> 
-				
-				<pxtfl:searchField value="Pesquisar" id="searchFornecedor" searchProperty="nome" controller="#{produtoBean.searchFornecedor}" modalTitle="Fornecedor" disabledOn="#{produtoBean.disabledOnDefault}" width="80%">
+				<pxtfl:searchField value="Pesquisar" id="searchFornecedor" searchProperty="nome" controller="#{produtoBean.searchFornecedor}" modalTitle="Fornecedor" disabledOn="#{produtoBean.disabledOnDefault}" width="98%">
 					<ui:define name="filtros">
 						<pxt:panelGrid columnsWidth="10%;90%">
 							<h:outputText value="Código:" styleClass="outputText" />
 							<h:inputText
-								value="#{produtoBean.searchFornecedor.searchObject.codigo}" style="width: 15%;">
+								value="#{produtoBean.searchFornecedor.searchObject.codigo}" maxlength="7" style="width: 15%;">
 								<pxt:onlyNumber />
 							</h:inputText>
 							
 							<h:outputText value="Nome:" styleClass="outputText" />
 							<h:inputText
-								value="#{produtoBean.searchFornecedor.searchObject.nome}" style="width: 100%;">
+								value="#{produtoBean.searchFornecedor.searchObject.nome}" maxlength="100" style="width: 100%;">
 								<pxt:upperCase />
 							</h:inputText>
 							
 							<h:outputText value="CNPJ:" styleClass="outputText" />
 							<h:inputText
-								value="#{produtoBean.searchFornecedor.searchObject.cnpj}" style="width: 100%;">
+								value="#{produtoBean.searchFornecedor.searchObject.cnpj}" maxlength="14" style="width: 100%;">
 								<pxt:onlyNumber />
 							</h:inputText>
 							
@@ -71,21 +59,20 @@
 					</ui:define>
 				</pxtfl:searchField>
 
-				<pxtfl:searchField value="Pesquisar" id="searchMarca" searchProperty="descricao" controller="#{produtoBean.searchMarca}" modalTitle="Marca" disabledOn="#{produtoBean.disabledOnDefault}" width="80%">
+				<pxtfl:searchField value="Pesquisar" id="searchMarca" searchProperty="descricao" controller="#{produtoBean.searchMarca}" modalTitle="Marca" disabledOn="#{produtoBean.disabledOnDefault}" width="98%">
 					<ui:define name="filtros">
 						<pxt:panelGrid columnsWidth="10%;90%">
 							<h:outputText value="Código:" styleClass="outputText" />
 							<h:inputText
-								value="#{produtoBean.searchMarca.searchObject.codigo}" style="width: 15%;">
+								value="#{produtoBean.searchMarca.searchObject.codigo}" maxlength="7" style="width: 15%;">
 								<pxt:onlyNumber />
 							</h:inputText>
 							
 							<h:outputText value="Descrição:" styleClass="outputText" />
 							<h:inputText
-								value="#{produtoBean.searchMarca.searchObject.descricao}" style="width: 100%;">
+								value="#{produtoBean.searchMarca.searchObject.descricao}" maxlength="100" style="width: 100%;">
 								<pxt:upperCase />
-							</h:inputText>
-							
+							</h:inputText>				
 						</pxt:panelGrid>
 					</ui:define>
 					<ui:define name="colunas">
@@ -95,22 +82,45 @@
 							columnWidth="80%" />
 					</ui:define>
 				</pxtfl:searchField>
+				
+				<h:panelGroup>
+					<h:selectBooleanCheckbox value="#{produtoBean.domain.indicadorAtivo}" disabled= "#{produtoBean.disabledOnDefault}" />
+					<h:outputLabel value="Ativo?" styleClass="outputText"/>
+				</h:panelGroup>
+			</pxt:panelGrid>
 			
-				<h:inputText value="#{produtoBean.domain.modeloProduto}" style="width:80%" maxlength="18" disabled="#{produtoBean.disabledOnDefault}" >
+			<pxt:panelGrid id="panelCaracteristicasProduto" columnsWidth="21%;15%;21%;21%;21%" width="85%">
+				<h:outputLabel value="Modelo:" styleClass="outputText" />
+				<h:outputLabel value="Tamanho:" styleClass="outputText" />
+				<h:outputLabel value="Categoria:" styleClass="outputText" />
+				<h:outputLabel value="Cor:" styleClass="outputText" />
+				<h:outputLabel value="Valor:" styleClass="outputText" />
+				
+				<h:inputText value="#{produtoBean.domain.modeloProduto}" style="width:94%" maxlength="18" disabled="#{produtoBean.disabledOnDefault}" >
 					<pxt:upperCase />
 				</h:inputText> 
-				<h:inputText value="#{produtoBean.domain.categoriaProduto}" style="width:80%" maxlength="18" disabled="#{produtoBean.disabledOnDefault}" >
+					
+				<h:selectOneMenu value="#{produtoBean.domain.tamanhoProduto}" style="width:95%" converter="defaultConverter"  disabled="#{produtoBean.disabledOnDefault}">
+					<f:selectItem itemLabel="" itemValue="" />
+					<f:selectItems value="#{produtoBean.numeracoes}" var="obj" itemLabel="#{obj}"/>
+				</h:selectOneMenu>
+				
+				<h:inputText value="#{produtoBean.domain.categoriaProduto}" style="width:94%" maxlength="18" disabled="#{produtoBean.disabledOnDefault}" >
 					<pxt:upperCase />
 				</h:inputText>
-				<h:inputText value="#{produtoBean.domain.corProduto}" style="width:70%" maxlength="18" disabled="#{produtoBean.disabledOnDefault}" >
+				<h:inputText value="#{produtoBean.domain.corProduto}" style="width:94%" maxlength="18" disabled="#{produtoBean.disabledOnDefault}" >
 					<pxt:upperCase />
 				</h:inputText> 	
-			
+				<h:inputText value="#{produtoBean.domain.valor}" typeFormat="currency" style="width:65%" maxlength="9" disabled="#{produtoBean.disabledOnDefault}">
+    				<pxt:onlyNumber />
+    				<f:convertNumber minFractionDigits="2" maxFractionDigits="2" currencyCode="BRL" />
+    				<pxt:convertCurrency />
+				</h:inputText>
 
 			</pxt:panelGrid>
 		</ui:define>
 		
-		<ui:define name="colunasTabela" columnsWidth="10%;90%">
+		<ui:define name="colunasTabela" >
 			<pxtfl:column headerValue="Código" value="#{obj.codigoProduto}" />
 			<pxtfl:column headerValue="Descrição" value="#{obj.descricaoProduto}" />
 			<pxtfl:column headerValue="Fornecedor" value="#{obj.fornecedor.nome}" />
@@ -119,7 +129,8 @@
 			<pxtfl:column headerValue="Modelo" value="#{obj.modeloProduto}" />
 			<pxtfl:column headerValue="Categoria" value="#{obj.categoriaProduto}" />
 			<pxtfl:column headerValue="Cor" value="#{obj.corProduto}" />
-			<pxtfl:column headerValue="Status" value="#{obj.indicadorAtivo ? 'Ativo' : 'Inativo'}" />
+			<pxtfl:column headerValue="Valor" value="#{obj.valor}" />
+			<pxtfl:column headerValue="Situação" value="#{obj.indicadorAtivo ? 'Ativo' : 'Inativo'}" />
 			
 		</ui:define>		
 	</ui:composition>
