--- a/view/src/main/webapp/principal/bemVindo.xhtml
+++ b/view/src/main/webapp/principal/bemVindo.xhtml
@@ -2,20 +2,21 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:rich="http://richfaces.org/rich" xmlns:pxt="http://www.peixoto.com.br/pxtFaces"
-	xmlns:pxtcc="http://java.sun.com/jsf/composite/peixoto" xmlns:a4j="http://richfaces.org/a4j" xmlns:pxtfl="http://www.peixoto.com.br/jsf" 
-	xmlns:pxtfc="http://www.peixoto.com.br/jsf/core">
+	xmlns:pxtcc="http://java.sun.com/jsf/composite/peixoto" xmlns:a4j="http://richfaces.org/a4j">
 	<h:form>
-		<pxt:panelGrid columnsWidth="*" rowsHeight="100%" height="100%" styleClass="richPanelPrincipal" styleTable="height: 100%" rendered="false">
-			<pxt:cell align="center" valign="middle">
-				<h:graphicImage name="logo_peixoto_140x162.png" libary="pxt.framework.faces.img"/>
-				<br />
-				<h:outputText style="font-size: 28;" value="Sistema NexusShop" />
-				<br />
-				<h:outputText style="font-size: 18;" value="Versão 1.6.99" />
-				<br />
-			</pxt:cell>
-		</pxt:panelGrid>
+		<rich:panel header="SEJA BEM VINDO!" styleClass="richPanelPrincipal">
+			<pxt:panelGrid columnsWidth="*" rowsHeight="20%,*" height="90%">
+				<h:outputText value="" />
 
-		
+				<pxt:cell align="center" valign="middle">
+					<h:graphicImage value="/resources/img/fundo-logo.png"/>
+					<br />
+					<h:outputText style="font-size: 35;" value="Nexus SHOP"/>
+					<br />
+					<h:outputText style="font-size: 20;" value="Versão 777" />
+					<br />
+				</pxt:cell>
+			</pxt:panelGrid>
+		</rich:panel>
 	</h:form>
 </ui:composition>
