--- a/view/src/main/webapp/principal/menu.xhtml
+++ b/view/src/main/webapp/principal/menu.xhtml
@@ -52,20 +52,23 @@
 					<pxt:navigation target="../operacoes/movimentacoesMercadoria.xhtml" />
 				</rich:menuItem>
 				
-			
-
 			</rich:dropDownMenu>
 			
 			<rich:dropDownMenu mode="ajax" label="Consultas">
-
-				<rich:menuItem label="Relatório de Movimentações">
-					<pxt:navigation target="../consultas/movimentacao.xhtml" />
-				</rich:menuItem>
 				
-			
+				<rich:menuItem label="Consulta de Estoque">
+					<pxt:navigation target="../consultas/consultaEstoque.xhtml" />
+				</rich:menuItem>
 
 			</rich:dropDownMenu>
 				
+			<rich:dropDownMenu mode="ajax" label="Relatórios">
+
+				<rich:menuItem label="Relatório de Movimentações">
+					<pxt:navigation target="../consultas/movimentacao.xhtml" />
+			</rich:menuItem>
+			
+			</rich:dropDownMenu>	
 
 		</rich:toolbar>
 	</h:form>
